fix: align drag handle with table blocks (fixes #2604)

--- a/packages/core/src/editor/editor.css
+++ b/packages/core/src/editor/editor.css
@@ -156,7 +156,8 @@ Tippy popups that are appended to document.body directly
   --bn-table-handle-size: calc(18px / 2);
   overflow-y: hidden;
   padding: var(--bn-table-handle-size) var(--bn-table-widget-size)
-    var(--bn-table-widget-size) var(--bn-table-handle-size);
+  var(--bn-table-widget-size) var(--bn-table-handle-size);
+  margin-top: calc(-1 * var(--bn-table-handle-size));
   position: relative;
   width: 100%;
 }
